Collection can unexpectedly disappear while holding database DDL lock during checkMetadataConsistency()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: 8.1.0-rc0, 8.0.0
    • Component/s: Sharding
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-08-18
    • 0
    • 2
    • 馃煡 DDL
    • None
    • None
    • None
    • None
    • None
    • None

      While investigating SERVER-94838, we found that checkMetadataConsistency can hit a tripwire assertion (code 7531700 "Collection unexpectedly disappeared while holding database DDL lock") while it checks that a sharded collection is supported by an index prefixed by the shard key.

      While the operations involved are similar to SERVER-94740, the root cause is different, namely that the checkMetadataConsistency doesn't expect a local "garbage" collection to be able to disappear while it holds the DDL lock, but the transition to a dedicated config server can do it, as it drops the database after it checks that it is empty.

      The high-level interleaving is as follows:
      1. Create a sharded cluster with a config shard.
      2. Create a sharded collection with chunks on the config shard, then move them out of the config shard. After this, the local collection will still exist on the config shard, and also in the sharding catalog.
      3. The still-remaining local collection in the config shard should not have an index supporting the shard key, as otherwise checkMetadataConsistency can complete the check without taking the collection lock. This can be achieved by creating a new index and then refining the shard key on it. Since the config shard does not own any chunks, the index will not be created there and the existing index will no longer support the shard key.
      4. Start a transition from the config shard to a dedicated config server up to the point right before blocking new DDL coordinators.
      5. Start a checkMetadataConsistency. It sees that the collection exists on both the local and sharding catalog and starts checking for shard key index inconsistencies, up until before it takes the collection lock for the local collection.
      6. The transition to a dedicated config server continues executing and drops the database on the config shard.
      7. The checkMetadataConsistency continues running and tries to take the collection lock. It detects that the local collection does not exist anymore and tasserts.

      A reproducer is attached.

      Note: The are two interleavings that are affected by the described issue. The first one is described above, and it occurs while checking for kMissingShardKeyIndex & kShardMissingCollectionRoutingInfo. A very similar interleaving might affect the codepath that is executed as part of checking for the kMissingLocalCollection inconsistencies. This codepath runs a similar sequence of operations, just that there is no explicit tassert() inspecting the collection lock. Nevertheless, the assumption made by the code might still be violated, making the collection disappear while holding the DDL lock.

            Assignee:
            Allison Easton
            Reporter:
            Joan Bruguera Mic贸
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: