SERVER-96906 Collection can unexpectedly disappear while holding database DDL lock during checkMetadataConsistency (#39637)

GitOrigin-RevId: 7a626cbeee37362d35ae200e3878cb37ca29e2fe